deps/v8/test/message/fail/object-rest-binding-pattern.out
*%(basename)s:5: SyntaxError: `...` must be followed by an identifier in declaration contexts
let {...{}} = {};
         ^
SyntaxError: `...` must be followed by an identifier in declaration contexts
